--- a/EncryptAndMask/src/main/resources/templates/start.html
+++ b/EncryptAndMask/src/main/resources/templates/start.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
-    <div class="container">
+    <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <div class="card p-4">
