--- a/EncryptAndMask/src/main/resources/templates/home.html
+++ b/EncryptAndMask/src/main/resources/templates/home.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container-fluid my-5">
         <div class="row">
-            <div class="col-md-2 mx-5">
+            <div class="col-md-3 mx-5">
                 <!-- Your Information -->
                 <div class="card p-4 mb-4">
                     <h2>Your Information</h2>
@@ -18,9 +18,9 @@
                     <div id="personalError" class="text-danger mt-2" style="display: none;"></div>
                 </div>
             </div>
-            <div class="col-md-9">
+            <div class="col-md-8">
                 <!-- All Users -->
-                <div class="card p-4 mb-4">
+                <div class="card p-4 mb-4 table-container">
                     <h2>All Users</h2>
                     <table class="table table-striped">
                         <thead>
@@ -39,7 +39,7 @@
                     <div id="usersError" class="text-danger mt-2" style="display: none;"></div>
                 </div>
             </div>
-            <div class="col-md-4 mx-5">
+            <div class="col-md-5 mx-5">
                 <!-- Your Permissions -->
                 <div class="card p-4 mb-4">
                     <h2>Your Permissions</h2>
